filled out html head tag, finished jQuery fetch for simple API call

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!--DOCTYPE html-->
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <script language="JavaScript" src="./script.js" type="text/javascript" defer></script>
     <script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous" defer></script>
-    <script src="script.js"></script>
+    <script language="JavaScript" src="./script.js" type="text/javascript" defer></script>
+    <title>ACPC Wardrobe</title>
 </head>
 <body>
 
