--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ACPC Wardrobe</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--Font Awesome-->
-    <script src="https://use.fontawesome.com/e85072e2ac.js"></script>
-    <!--CSS & jQuery files-->
-    <link rel="stylesheet" href="./style.css" type="text/css">
-    <script language="JavaScript" src="./script.js" type="text/javascript"></script>
+    <!--meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"-->
+    <title>ACPC Wardrobe</title>
     <!--jQuery user script-->
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous" language="JavaScript"></script>
+    <!--Font Awesome>
+    <script src="https://use.fontawesome.com/e85072e2ac.js"></script-->
+    <!--CSS & jQuery files-->
+    <script language="JavaScript" src="script.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 </head>
 
@@ -38,22 +39,23 @@
 
 <div id="show-all">
 
-    <select name="animals" id="select-animal">
-        <option value="">--Please choose an animal--</option>
+    <select name="animals" id="selectanimal">
+        <option>--Please choose an animal--</option>
         <!-- <option value="object-id">Animal Name</option> -->
-        <option value="">Don't see your favorite animal? Add them in the menu above!</option>
-        <optgroup label="Don't see your favorite animal? Add them in the menu above!"></optgroup>
+        <option>Don't see your favorite animal? Add them in the menu above!</option>
+        <!--optgroup label="Don't see your favorite animal? Add them in the menu above!"></optgroup-->
     </select>
 
-    <select name="outfits" id="select-outfit">
-        <option value="">--Please choose a clothing item--</option>
+    <select name="outfits" id="selectoutfit">
+        <option>--Please choose a clothing item--</option>
         <!-- <option value="object-id">Animal Name</option> -->
         <!-- post-MVP: add multiple attribute & optgroup tag for different categories of clothing & multiple clothing items per outfit -->
-        <option value="">Don't see your favorite items? Add them in the menu above!</option>
-        <optgroup label="Don't see your favorite items? Add them in the menu above!"></optgroup>
+        <option>Don't see your favorite items? Add them in the menu above!</option>
+        <!--optgroup label="Don't see your favorite items? Add them in the menu above!"></optgroup-->
     </select>
 
-    <button id="set-fave">Make a new card!</button>
+    <button id="setfave">Make a new card!</button>
+
 </div>
 
 
