--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <!--meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ACPC Wardrobe</title>
     <!--jQuery user script-->
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous" language="JavaScript"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous" language="JavaScript" defer></script>
     <!--Font Awesome>
     <script src="https://use.fontawesome.com/e85072e2ac.js"></script-->
     <!--CSS & jQuery files-->
-    <script language="JavaScript" src="script.js" type="text/javascript"></script>
+    <script language="JavaScript" src="script.js" type="text/javascript" defer></script>
     <link rel="stylesheet" href="style.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
