testing delete function

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 <div id="show-all">
 
     <select name="animals" id="selectanimal">
-        <option>--Please choose an animal--</option>
+        <option val="">--Please choose an animal--</option>
         <!-- <option value="object-id">Animal Name</option> -->
-        <option>Don't see your favorite animal? Add them in the menu above!</option>
+        <option val="">Don't see your favorite animal? Add them in the menu above!</option>
         <!--optgroup label="Don't see your favorite animal? Add them in the menu above!"></optgroup-->
     </select>
 
@@ -55,6 +55,13 @@
     </select>
 
     <button id="setfave">Make a new card!</button>
+    <button id="deleteSelected">Delete Selection(s)</button>
+    <!--button id="updateAnimal">Update Animal</button-->
+    <button id="updateOutfit">Update Outfit</button>
+
+    <div id="display-animals-here">
+
+    </div>
 
 </div>
 
