testing delete function and logging error

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 <div id="show-all">
 
     <select name="animals" id="selectanimal">
-        <option val="">--Please choose an animal--</option>
+        <option val="0">--Please choose an animal--</option>
         <!-- <option value="object-id">Animal Name</option> -->
-        <option val="">Don't see your favorite animal? Add them in the menu above!</option>
+        <option val="0">Don't see your favorite animal? Add them in the menu above!</option>
         <!--optgroup label="Don't see your favorite animal? Add them in the menu above!"></optgroup-->
     </select>
 
