added links in hamburger menu for create functions

--- a/index.html
+++ b/index.html
@@ -28,11 +28,25 @@
       </button>
     </nav>
     <div class="collapse" id="navbarToggleExternalContent" style="background-color: #58bca9;">
-        <div style="background-color: #58bca9;"> 
+        <div id="display-links" style="background-color: #58bca9;"> 
           <h4 class="text-muted">View all:</h4>
-          <a href="./animals" class="nav-link"><span class="text-white">Animals</span></a>
-          <br/>
-          <a href="./outfits" class="nav-link"><span class="text-white">Outfits</span></a>
+            <a href="./animals" class="nav-link" id="display-all-animals">
+                <span class="text-white">Animals</span>
+            </a>
+            <br/>
+            <a href="./outfits" class="nav-link" id="display-all-outfits">
+                <span class="text-white">Outfits</span>
+            </a>
+        </div>
+        <div id="create-links" style="background-color: #58bca9;"> 
+            <h4 class="text-muted">Add new:</h4>
+            <a href="./animals" class="nav-link" id="add-new-animal">
+                <span class="text-white">Animals</span>
+            </a>
+            <br/>
+            <a href="./outfits" class="nav-link" id="add-new-outfit">
+                <span class="text-white">Outfits</span>
+            </a>
         </div>
     </div>
 </div>
