updated add animal/outfit functions to empty drop-down menus and repopulate on click

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         <!--optgroup label="Don't see your favorite animal? Add them in the menu above!"></optgroup-->
     </select>
 
-    <!---- Select an animal ---->
-    <label id="outfits-menu">Pick a clothing item: </label>
+    <!---- MENU Select an outfit ---->
+    <label id="outfits-menu" for="selectoutfit">Pick a clothing item: </label>
     <p>(Don't see your favorite items? Add them in the menu above!)</p>
     <select name="outfits" id="selectoutfit">
         <!-- <option val="0" disabled selected>Please choose a clothing item</option> -->
