added and styled Isabelle

--- a/index.html
+++ b/index.html
@@ -140,8 +140,11 @@
         </div>
       </div>
 
+
 <!---- Drop-down menus ---->
 <div id="show-all">
+  <img id="hi-isabelle" src="https://www.pngjoy.com/pngl/215/4201817_ice-climbers-isabelle-animal-crossing-smash-png-download.png" alt="A photo of Isabelle waving in her green checkered sweater vest and dark green pencil skirt">
+
   <div id="menus-container">
     <!---- Select an animal ---->
     <label id="animals-menu">Pick animal: </label>
