styling, populate new card function

--- a/index.html
+++ b/index.html
@@ -169,12 +169,14 @@
         <!--optgroup label="Don't see your favorite items? Add them in the menu above!"></optgroup-->
     </select>
 
-    <!---- Buttons for drop-down menu ---->
-    <button id="setfave">Make a new card!</button>
-    <button id="deleteSelected">Delete Selection(s)</button>
+    <div id="buttons-container">
+      <!---- Buttons for drop-down menu ---->
+      <button id="setfave">Make a new card!</button>
+      <button id="deleteSelected">Delete Selection(s)</button>
 
-    <!--button id="updateAnimal">Update Animal</button-->
-    <button id="updateOutfit">Update Outfit</button>
+      <!--button id="updateAnimal">Update Animal</button-->
+      <!-- <button id="updateOutfit">Update Outfit</button> -->
+    </div>
   </div>
 
     <!---- Div Container to display animal cards --->
